<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragmentHome">

    <fragment
        android:id="@+id/fragmentHome"
        android:name="com.example.seknet.fragments.FragmentHome"
        android:label="@string/item_menu_init" />

    <fragment
        android:id="@+id/fragmentInfo"
        android:name="com.example.seknet.fragments.FragmentInfo"
        android:label="@string/item_menu_info" />

    <fragment
        android:id="@+id/fragmentPortscan"
        android:name="com.example.seknet.fragments.FragmentPortscan"
        android:label="@string/item_menu_portscan" />
    <fragment
        android:id="@+id/fragmentSpeedtest"
        android:name="com.example.seknet.fragments.FragmentSpeedtest"
        android:label="@string/item_menu_speedtest" />
    <fragment
        android:id="@+id/fragmentAnalisis"
        android:name="com.example.seknet.fragments.FragmentAnalisis"
        android:label="@string/item_menu_overview" />
    <fragment
        android:id="@+id/fragmentPing"
        android:name="com.example.seknet.fragments.FragmentPing"
        android:label="FragmentPing" />
</navigation>